Enhance SecurityConfig with dynamic CORS origins
Added CORS configuration to allow origins from application properties.